--- a/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
+++ b/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
@@ -1,1 +1,58 @@
 /* here you can put your own css to customize and override the theme */
+.direct {
+    position: relative;
+    overflow-x: hidden;
+    padding: 0;
+}
+
+.direct > .direct-content {
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    -moz-transition: -moz-transform 0.5s ease-in-out;
+    -o-transition: -o-transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+}
+
+.direct > .direct-content {
+    -webkit-transform: translate(101%, 0);
+    -ms-transform: translate(101%, 0);
+    -o-transform: translate(101%, 0);
+    transform: translate(101%, 0);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 80%;
+    background: #78a3dc;
+    /*color: #fff;*/
+    overflow: auto;
+}
+
+.direct.direct-open > .direct-content {
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    transform: translate(0, 0);
+}
+
+.direct > .direct-content > .content-title {
+    border-bottom: 1px solid #eef1f5;
+    padding: 10px;
+    min-height: 28px;
+}
+
+.direct > .direct-content > .content-title > .actions {
+    padding-left: 5px;
+    margin-right: 15px;
+    display: inline-block;
+}
+
+.direct > .direct-content > .content-title > .caption {
+    padding-left: 5px;
+    display: inline-block;
+}
+
+.direct > .direct-content > .content-body {
+    padding-top: 8px;
+    clear: both;
+}
