--- a/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
+++ b/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
@@ -1,4 +1,38 @@
 /* here you can put your own css to customize and override the theme */
+.mgr5 {
+    margin-right: 5px !important;
+}
+
+.mgr10 {
+    margin-right: 10px !important;
+}
+
+.mgr15 {
+    margin-right: 15px !important;
+}
+
+.mgr20 {
+    margin-right: 20px !important;
+}
+.mgl5 {
+    margin-left: 5px !important;
+}
+
+.mgl10 {
+    margin-left: 10px !important;
+}
+
+.mgl15 {
+    margin-left: 15px !important;
+}
+
+.mgl20 {
+    margin-left: 20px !important;
+}
+
+/**
+ * direct right content
+ */
 .direct {
     position: relative;
     overflow-x: hidden;
@@ -26,6 +60,7 @@
     background: #78a3dc;
     /*color: #fff;*/
     overflow: auto;
+    z-index: 10000;
 }
 
 .direct.direct-open > .direct-content {
