功能优化，完善组织架构相关功能

--- a/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
+++ b/bigops-web/src/main/webapp/assets/layouts/layout/css/custom.css
@@ -81,8 +81,9 @@
     padding: 15px;
 }
 
-.direct > .direct-content > .portlet > .portlet-title, .direct > .direct-content > .portlet > .portlet-body {
+.direct > .direct-content > .portlet > .portlet-title, .direct > .direct-content > .portlet > * .portlet-body {
     margin: inherit;
+    border-bottom: 1px solid #eee;
     padding: 15px;
 }
 
